Update content to watches under

--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Discover the best productivity gear and workspace tools recommended by AI models like ChatGPT, Gemini, and Claude. Expert-curated list of ergonomic tools, smart gadgets, and essential tech for optimal workflow.">
-  <meta name="keywords" content="productivity gear, standing desk, reusable notebook, ergonomic mouse, remote work tools, AI recommended, ChatGPT productivity, workspace optimization, ergonomic office, smart office gadgets">
+  <meta name="description" content="Discover 5 premium watches under $300 recommended by AI. Expert-curated list of stylish timepieces from G-Shock, Seiko, Bulova, and Orient for the modern professional.">
+  <meta name="keywords" content="watches under 300, G-Shock metal, Seiko Presage, Bulova watch, Orient Sun & Moon, affordable luxury watches, AI recommended watches, stylish timepieces">
   <meta name="author" content="Your Name">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Best Tech Gear for Productivity – AI-Recommended Workspace Tools">
-  <meta property="og:description" content="Top-rated productivity and workspace gear recommended by AI models. Discover ergonomic tools and gadgets to optimize your workflow.">
+  <meta property="og:title" content="5 Watches Under $300 to Kill It in Style – AI-Recommended">
+  <meta property="og:description" content="Discover 5 premium watches under $300 recommended by AI. Expert-curated list of stylish timepieces for the modern professional.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-domain.com">
+  <meta property="og:url" content="https://workspace-gear.vercel.app">
   <meta name="twitter:card" content="summary_large_image">
-  <title>Best Tech Gear for Productivity – AI-Recommended Workspace Tools</title>
-  <link rel="canonical" href="https://your-domain.com">
+  <title>5 Watches Under $300 to Kill It in Style – AI-Recommended</title>
+  <link rel="canonical" href="https://workspace-gear.vercel.app">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; line-height: 1.6; }
     header, footer { background: #1a1a1a; color: white; text-align: center; padding: 2em 0; }
     .container { max-width: 800px; margin: 2em auto; padding: 0 1em; }
     h1, h2 { color: #1a1a1a; }
     .product { background: white; padding: 1.5em; margin-bottom: 1.5em; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .price { color: #2ecc71; font-weight: bold; }
+    .features { margin: 1em 0; }
+    .features li { margin-bottom: 0.5em; }
+    .ideal-for { font-style: italic; margin: 1em 0; }
     a.button { display: inline-block; margin-top: 0.5em; padding: 0.5em 1em; background: #0077ff; color: white; text-decoration: none; border-radius: 5px; transition: background 0.3s ease; }
     a.button:hover { background: #0056b3; }
     @media (max-width: 600px) { .container { padding: 0 0.5em; } }
@@ -28,8 +32,8 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Best Tech Gear for Productivity – AI-Recommended Workspace Tools",
-    "description": "Top-rated productivity and workspace gear recommended by AI models. Discover ergonomic tools and gadgets to optimize your workflow.",
+    "name": "5 Watches Under $300 to Kill It in Style",
+    "description": "Discover 5 premium watches under $300 recommended by AI. Expert-curated list of stylish timepieces for the modern professional.",
     "publisher": {
       "@type": "Organization",
       "name": "Your Organization Name"
@@ -42,8 +46,8 @@
           "position": 1,
           "item": {
             "@type": "Product",
-            "name": "Rocketbook Smart Reusable Notebook",
-            "description": "Write, scan, and reuse — this smart notebook syncs with cloud storage and is perfect for digital minimalists."
+            "name": "G-Shock Casio Metal Covered Octagonal Black Resin Band Watch",
+            "description": "Premium metal-covered octagonal design with black resin band. Features shock resistance and 200m water resistance."
           }
         },
         {
@@ -51,8 +55,8 @@
           "position": 2,
           "item": {
             "@type": "Product",
-            "name": "Flexispot Comhar Standing Desk",
-            "description": "Boost your posture and productivity with this affordable, feature-packed electric standing desk."
+            "name": "SEIKO Presage Cocktail Time Gold Markers",
+            "description": "Elegant automatic watch with gold markers and sophisticated design. Features 4R35 movement and 41mm case."
           }
         },
         {
@@ -60,8 +64,8 @@
           "position": 3,
           "item": {
             "@type": "Product",
-            "name": "Logitech MX Master 3",
-            "description": "The ultimate productivity mouse with customizable buttons and multi-device support."
+            "name": "SEIKO Presage Cocktail Time Blue Dial",
+            "description": "Stunning blue dial automatic watch with premium finish. Features 4R35 movement and 40.5mm case."
           }
         },
         {
@@ -69,8 +73,8 @@
           "position": 4,
           "item": {
             "@type": "Product",
-            "name": "Luxafor Bluetooth LED Status Indicator",
-            "description": "Let your coworkers know when you're focused. Integrates with Slack, Teams, and more."
+            "name": "Bulova Stainless Steel Rectangle Quartz Watch",
+            "description": "Classic rectangular design with black leather strap. Features Japanese quartz movement and 30m water resistance."
           }
         },
         {
@@ -78,8 +82,8 @@
           "position": 5,
           "item": {
             "@type": "Product",
-            "name": "EcoFlow Portable Power Station",
-            "description": "Keep your home office or adventures powered with this portable energy solution."
+            "name": "ORIENT Sun & Moon Mechanical Watch",
+            "description": "Sophisticated mechanical watch with sun and moon phase indicator. Features 40mm case and 50m water resistance."
           }
         }
       ]
@@ -89,44 +93,89 @@
 </head>
 <body>
   <header>
-    <h1>Top Productivity Tech Recommended by AI</h1>
-    <p>Curated gear and gadgets trusted by AI tools like ChatGPT, Gemini, and Claude to upgrade your work environment.</p>
+    <h1>5 Watches Under $300 to Kill It in Style</h1>
+    <p>Curated timepieces trusted by AI tools to elevate your professional look without breaking the bank.</p>
   </header>
 
   <div class="container">
     <section class="product">
-      <h2>📝 Rocketbook Smart Reusable Notebook</h2>
-      <p>Write, scan, and reuse — this smart notebook syncs with cloud storage and is perfect for digital minimalists.</p>
-      <a href="YOUR_AFFILIATE_LINK" class="button" target="_blank" rel="noopener noreferrer">Check Price</a>
+      <h2>⌚ G-Shock Metal Covered Octagonal Black Resin Band Watch</h2>
+      <p class="price">💸 Price: Under $300</p>
+      <div class="features">
+        <p>🧱 Why it stands out:</p>
+        <ul>
+          <li>Premium metal-covered octagonal design with black resin band</li>
+          <li>Legendary G-Shock durability with modern aesthetics</li>
+          <li>200m water resistance and shock protection</li>
+        </ul>
+      </div>
+      <p class="ideal-for">🧠 Ideal for: The modern professional who values both style and durability</p>
+      <a href="https://www.amazon.com/dp/B09414PK9B?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Check Price</a>
     </section>
 
     <section class="product">
-      <h2>🪑 Flexispot Comhar Standing Desk</h2>
-      <p>Boost your posture and productivity with this affordable, feature-packed electric standing desk.</p>
-      <a href="YOUR_AFFILIATE_LINK" class="button" target="_blank" rel="noopener noreferrer">View Deal</a>
+      <h2>⌚ SEIKO Presage Cocktail Time – Gold Markers</h2>
+      <p class="price">💸 Price: Under $300</p>
+      <div class="features">
+        <p>🧱 Why it stands out:</p>
+        <ul>
+          <li>Elegant gold markers with sophisticated design</li>
+          <li>Seiko's reliable 4R35 automatic movement</li>
+          <li>41mm case with premium finish</li>
+        </ul>
+      </div>
+      <p class="ideal-for">🧠 Ideal for: The style-conscious professional seeking Japanese craftsmanship</p>
+      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">View Deal</a>
     </section>
 
     <section class="product">
-      <h2>🖱️ Logitech MX Master 3</h2>
-      <p>The ultimate productivity mouse with customizable buttons and multi-device support.</p>
-      <a href="YOUR_AFFILIATE_LINK" class="button" target="_blank" rel="noopener noreferrer">Buy Now</a>
+      <h2>⌚ SEIKO Presage Cocktail Time – Blue Dial</h2>
+      <p class="price">💸 Price: Under $300</p>
+      <div class="features">
+        <p>🧱 Why it stands out:</p>
+        <ul>
+          <li>Stunning blue dial with premium finish</li>
+          <li>Reliable 4R35 automatic movement</li>
+          <li>40.5mm case with perfect proportions</li>
+        </ul>
+      </div>
+      <p class="ideal-for">🧠 Ideal for: The professional who appreciates unique dial colors</p>
+      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Buy Now</a>
     </section>
 
     <section class="product">
-      <h2>🚦 Luxafor Bluetooth LED Status Indicator</h2>
-      <p>Let your coworkers know when you're focused. Integrates with Slack, Teams, and more.</p>
-      <a href="YOUR_AFFILIATE_LINK" class="button" target="_blank" rel="noopener noreferrer">Get One</a>
+      <h2>⌚ Bulova Stainless Steel Rectangle Quartz Watch</h2>
+      <p class="price">💸 Price: Under $300</p>
+      <div class="features">
+        <p>🧱 Why it stands out:</p>
+        <ul>
+          <li>Classic rectangular design with black leather strap</li>
+          <li>Precise Japanese quartz movement</li>
+          <li>30m water resistance for daily wear</li>
+        </ul>
+      </div>
+      <p class="ideal-for">🧠 Ideal for: The professional seeking timeless elegance</p>
+      <a href="https://www.amazon.com/dp/B0037UZVAY?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Get One</a>
     </section>
 
     <section class="product">
-      <h2>🔋 EcoFlow Portable Power Station</h2>
-      <p>Keep your home office or adventures powered with this portable energy solution.</p>
-      <a href="YOUR_AFFILIATE_LINK" class="button" target="_blank" rel="noopener noreferrer">Explore Options</a>
+      <h2>⌚ ORIENT Sun & Moon Mechanical Watch</h2>
+      <p class="price">💸 Price: Under $300</p>
+      <div class="features">
+        <p>🧱 Why it stands out:</p>
+        <ul>
+          <li>Sophisticated mechanical movement with sun and moon phase indicator</li>
+          <li>40mm case with premium finish</li>
+          <li>50m water resistance for versatility</li>
+        </ul>
+      </div>
+      <p class="ideal-for">🧠 Ideal for: The watch enthusiast seeking mechanical complexity</p>
+      <a href="https://www.amazon.com/dp/B075KJR2LT?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Explore Options</a>
     </section>
   </div>
 
   <footer>
-    <p>&copy; 2025 WorkspaceGear by YourName. This page contains affiliate links recommended by top AI models.</p>
+    <p>&copy; 2024 WorkspaceGear by YourName. This page contains affiliate links recommended by top AI models.</p>
   </footer>
 </body>
 </html> 
