Add Vercel Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Vercel Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
+  <!-- End Vercel Analytics -->
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+  <!-- End Google Analytics -->
   <meta name="description" content="Discover 5 premium watches under $300 recommended by AI. Expert-curated list of stylish timepieces from G-Shock, Seiko, Bulova, and Orient for the modern professional.">
   <meta name="keywords" content="watches under 300, G-Shock metal, Seiko Presage, Bulova watch, Orient Sun & Moon, affordable luxury watches, AI recommended watches, stylish timepieces">
   <meta name="author" content="Your Name">
@@ -110,7 +125,7 @@
         </ul>
       </div>
       <p class="ideal-for">🧠 Ideal for: The modern professional who values both style and durability</p>
-      <a href="https://www.amazon.com/dp/B09414PK9B?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Check Price</a>
+      <a href="https://www.amazon.com/dp/B09414PK9B?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer" onclick="gtag('event', 'click', {'event_category': 'Affiliate', 'event_label': 'G-Shock Watch'});">Check Price</a>
     </section>
 
     <section class="product">
@@ -125,7 +140,7 @@
         </ul>
       </div>
       <p class="ideal-for">🧠 Ideal for: The style-conscious professional seeking Japanese craftsmanship</p>
-      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">View Deal</a>
+      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer" onclick="gtag('event', 'click', {'event_category': 'Affiliate', 'event_label': 'Seiko Gold Markers'});">View Deal</a>
     </section>
 
     <section class="product">
@@ -140,7 +155,7 @@
         </ul>
       </div>
       <p class="ideal-for">🧠 Ideal for: The professional who appreciates unique dial colors</p>
-      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Buy Now</a>
+      <a href="https://www.amazon.com/dp/B07Z58BB9C?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer" onclick="gtag('event', 'click', {'event_category': 'Affiliate', 'event_label': 'Seiko Blue Dial'});">Buy Now</a>
     </section>
 
     <section class="product">
@@ -155,7 +170,7 @@
         </ul>
       </div>
       <p class="ideal-for">🧠 Ideal for: The professional seeking timeless elegance</p>
-      <a href="https://www.amazon.com/dp/B0037UZVAY?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Get One</a>
+      <a href="https://www.amazon.com/dp/B0037UZVAY?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer" onclick="gtag('event', 'click', {'event_category': 'Affiliate', 'event_label': 'Bulova Watch'});">Get One</a>
     </section>
 
     <section class="product">
@@ -170,7 +185,7 @@
         </ul>
       </div>
       <p class="ideal-for">🧠 Ideal for: The watch enthusiast seeking mechanical complexity</p>
-      <a href="https://www.amazon.com/dp/B075KJR2LT?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer">Explore Options</a>
+      <a href="https://www.amazon.com/dp/B075KJR2LT?tag=thetrovs-20" class="button" target="_blank" rel="noopener noreferrer" onclick="gtag('event', 'click', {'event_category': 'Affiliate', 'event_label': 'Orient Watch'});">Explore Options</a>
     </section>
   </div>
 
