Add Google Analytics tracking

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <script defer src="/_vercel/insights/script.js"></script>
   <!-- End Vercel Analytics -->
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z732MS06TG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-Z732MS06TG');
   </script>
   <!-- End Google Analytics -->
   <meta name="description" content="Discover 5 premium watches under $300 recommended by AI. Expert-curated list of stylish timepieces from G-Shock, Seiko, Bulova, and Orient for the modern professional.">
