--- a/public/index.html
+++ b/public/index.html
@@ -38,15 +38,17 @@
   <link rel="alternate" hreflang="x-default" href="https://www.timepieceguides.com">
   <style>
     :root {
-      --primary-color: #2c3e50;
-      --secondary-color: #3498db;
-      --accent-color: #e74c3c;
-      --text-color: #333;
-      --light-gray: #f5f6fa;
-      --border-color: #dcdde1;
+      --primary-color: #0d1117;
+      --secondary-color: #58a6ff;
+      --accent-color: #238636;
+      --text-color: #c9d1d9;
+      --light-gray: #161b22;
+      --border-color: #30363d;
       --max-width: 1200px;
-      --border-radius: 8px;
-      --transition: all 0.3s ease;
+      --border-radius: 6px;
+      --transition: all 0.2s ease;
+      --card-bg: #1c2128;
+      --header-bg: #0d1117;
     }
 
     * {
@@ -59,22 +61,23 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       line-height: 1.6;
       color: var(--text-color);
-      background-color: var(--light-gray);
+      background-color: var(--primary-color);
       font-size: 16px;
     }
 
     header {
-      background-color: var(--primary-color);
-      color: white;
-      padding: 3rem 1rem;
+      background-color: var(--header-bg);
+      color: var(--text-color);
+      padding: 4rem 1rem;
       text-align: center;
       margin-bottom: 2rem;
+      border-bottom: 1px solid var(--border-color);
     }
 
     .subtitle {
       font-size: 1.3rem;
       margin-top: 1rem;
-      color: #ecf0f1;
+      color: #8b949e;
       max-width: 800px;
       margin-left: auto;
       margin-right: auto;
@@ -83,7 +86,7 @@
     .meta {
       margin-top: 1.5rem;
       font-size: 0.95rem;
-      color: #bdc3c7;
+      color: #8b949e;
       display: flex;
       justify-content: center;
       gap: 1rem;
@@ -96,10 +99,11 @@
     }
 
     article {
-      background: white;
+      background: var(--card-bg);
       border-radius: var(--border-radius);
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
       padding: 2.5rem;
+      border: 1px solid var(--border-color);
     }
 
     section {
@@ -110,19 +114,20 @@
       font-size: 2.8rem;
       margin-bottom: 1.5rem;
       line-height: 1.2;
+      color: #ffffff;
     }
 
     h2 {
       font-size: 2rem;
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 2rem;
-      border-bottom: 2px solid var(--border-color);
+      border-bottom: 1px solid var(--border-color);
       padding-bottom: 0.8rem;
     }
 
     h3 {
       font-size: 1.6rem;
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 1.5rem;
     }
 
@@ -136,12 +141,12 @@
       border-radius: var(--border-radius);
       overflow: hidden;
       transition: var(--transition);
-      background: white;
+      background: var(--card-bg);
     }
 
     .product-item:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      transform: translateY(-2px);
+      border-color: var(--secondary-color);
     }
 
     .product-details {
@@ -157,10 +162,12 @@
       border-radius: var(--border-radius);
       object-fit: cover;
       transition: var(--transition);
+      border: 1px solid var(--border-color);
     }
 
     .product-image img:hover {
       transform: scale(1.02);
+      border-color: var(--secondary-color);
     }
 
     .product-info {
@@ -174,6 +181,7 @@
       padding: 1.5rem;
       border-radius: var(--border-radius);
       margin-bottom: 1.5rem;
+      border: 1px solid var(--border-color);
     }
 
     .price-range {
@@ -201,19 +209,19 @@
     }
 
     .spec-list strong {
-      color: var(--primary-color);
+      color: #ffffff;
     }
 
     .use-case {
-      background-color: #f8f9fa;
+      background-color: var(--light-gray);
       padding: 1.5rem;
       border-radius: var(--border-radius);
       margin: 1.5rem 0;
-      border-left: 4px solid var(--secondary-color);
+      border-left: 3px solid var(--secondary-color);
     }
 
     .use-case h4 {
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 1rem;
       font-size: 1.2rem;
     }
@@ -239,7 +247,7 @@
     }
 
     .product-features li:before {
-      content: "✓";
+      content: "→";
       color: var(--secondary-color);
       position: absolute;
       left: 0;
@@ -252,9 +260,9 @@
 
     .cta-button {
       display: inline-block;
-      background-color: var(--secondary-color);
+      background-color: var(--accent-color);
       color: white;
-      padding: 1rem 2rem;
+      padding: 0.8rem 1.5rem;
       border-radius: var(--border-radius);
       text-decoration: none;
       font-weight: 600;
@@ -262,26 +270,28 @@
       text-align: center;
       font-size: 1.1rem;
       margin-top: 1rem;
+      border: 1px solid transparent;
     }
 
     .cta-button:hover {
-      background-color: #2980b9;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background-color: #2ea043;
+      transform: translateY(-1px);
     }
 
     footer {
-      background-color: var(--primary-color);
-      color: white;
+      background-color: var(--header-bg);
+      color: var(--text-color);
       text-align: center;
       padding: 2rem 1rem;
       margin-top: 4rem;
+      border-top: 1px solid var(--border-color);
     }
 
     footer p {
       max-width: 600px;
       margin: 0 auto;
       font-size: 1.1rem;
+      color: #8b949e;
     }
 
     @media (max-width: 768px) {
@@ -311,15 +321,15 @@
     }
 
     .expert-analysis {
-      background-color: #f8f9fa;
+      background-color: var(--light-gray);
       padding: 2rem;
       border-radius: var(--border-radius);
       margin: 2rem 0;
-      border-left: 4px solid var(--secondary-color);
+      border-left: 3px solid var(--secondary-color);
     }
 
     .expert-analysis h4 {
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 1.5rem;
       font-size: 1.3rem;
     }
@@ -331,15 +341,15 @@
     }
 
     .about-section {
-      background-color: white;
+      background-color: var(--card-bg);
       padding: 2.5rem;
       border-radius: var(--border-radius);
       margin: 4rem 0;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      border: 1px solid var(--border-color);
     }
 
     .about-section h2 {
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 2rem;
     }
 
@@ -347,6 +357,7 @@
       font-size: 1.1rem;
       line-height: 1.8;
       margin-bottom: 2.5rem;
+      color: var(--text-color);
     }
 
     .expertise {
@@ -354,10 +365,11 @@
       padding: 2rem;
       border-radius: var(--border-radius);
       margin: 2.5rem 0;
+      border: 1px solid var(--border-color);
     }
 
     .expertise h3 {
-      color: var(--primary-color);
+      color: #ffffff;
       margin-bottom: 1.5rem;
     }
 
@@ -382,20 +394,20 @@
     }
 
     .transparency {
-      background-color: #fff3cd;
+      background-color: #1c2128;
       padding: 2rem;
       border-radius: var(--border-radius);
       margin: 2.5rem 0;
-      border-left: 4px solid #ffc107;
+      border-left: 3px solid #f0b429;
     }
 
     .transparency h3 {
-      color: #856404;
+      color: #f0b429;
       margin-bottom: 1.5rem;
     }
 
     .transparency p {
-      color: #856404;
+      color: var(--text-color);
       margin: 0;
       font-size: 1.1rem;
       line-height: 1.8;
